# LionsStudentDashboard

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  INSTALL.md  README.md  backend_logs.txt  database.md  db_counts.txt  docker-compose.yml  frontend_build_log.txt  group1_colleges_depts (1).csv  group2_students_surveys.csv  group3_requirements_recs (2).csv  group4_courses_curriculums (1).csv  render.yaml  students.csv  요구사항_정리.md  요구사항_정리_0122.md  프로젝트_소개.md
ai/: .dockerignore  (+6 more)
backend/: .dockerignore  .env.example  ADMIN_GUIDE.md  ADMIN_SUMMARY.md  Dockerfile  ENTRY_REQUIREMENTS_IMPLEMENTATION.md  EVALUATION_ALGORITHM_DESIGN.md  EVALUATION_TESTING.md  QUICKSTART.md  README.md  admin_cli.py  api_spec.md  batch_evaluate_all.py  check_requirements.py  constants.py  database.py  filtered_ict.csv  hong_gildong_courses.json  insert_requirements.py  main.py  migrate_db.py  migrate_enrollments.py  pyproject.toml  seed_curriculum.py  seed_data.py  seed_departments.py  test_evaluation.py  updated_database.md
backend/data/: arch.json  college.json  dataIntelli.json  designConverge.json  elec.json  ime.json  necessary.json  necessary.md  recommended.json  sample_courses.json  sample_enrollments.json  sample_students.json  seed_courses.json  seed_enrollments.json  seed_students.json  sw.json
backend/fixtures/: seed_config.py
backend/models/: database.py  models.py  schemas.py
backend/routers/: admin.py  admin_upload_grouped.py  courses.py  dashboard.py  evaluation.py  graph.py  students.py  surveys.py
graphDB/: CHANGELOG.md  Dockerfile  README.md  analyze_similarity.py  course_all_aggregated.csv  course_graph_analysis.py  course_similarity_graph.py  debug_similarity.py  final_course.csv  pyproject.toml  quick_start.py  quick_start_output.txt  test.md  test_queries.py  test_queries_out.txt  threshold_experiment.py
(+59 files in other folders)
